Bug #12318 ERROR 42000: Unknown db 'information_schema' at call of a SP without privileges
Submitted: 2 Aug 2005 15:06 Modified: 17 Aug 2005 19:55
Reporter: Carsten Segieth
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.10a OS:Microsoft Windows (Windows XP Home (german) SP 2)
Assigned to: Jim Winstead Target Version:

[2 Aug 2005 15:06] Carsten Segieth
Description:
MySQL 5.0.10a shows the error message "ERROR 42000: Unknown database 'information_schema'"
for a call of a stored procedure where the calling user has no privileges for this SP if
the connection for this user has been made with specifying 'information_schema' as default
database. 

If an other default database is specified the error message is OK ("ERROR 42000: execute
command denied to user ..."), also the error message is OK ("command denied ...") when
using a default db other than 'information_schema' to connect and later change to
'information_schema'.

How to repeat:
Run attached test script.

Suggested fix:
show a better error message.
[10 Aug 2005 4:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/28095
[12 Aug 2005 2:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/28202
[16 Aug 2005 0:24] Jim Winstead
Fixed in 5.0.12.
[17 Aug 2005 19:55] Paul DuBois
Noted in 5.0.12 changelog.