Avoid spurious error when restoring INFORMATION_SCHEMA as the current database after failing to execute a stored procedure in an inaccessible database. (Bug #12318)